src/test/ui/specialization/min_specialization/issue-79224.stderr
error[E0277]: the trait bound `B: ToOwned` is not satisfied
  --> $DIR/issue-79224.rs:18:17
   |
LL | impl<B: ?Sized> Display for Cow<'_, B> {
   |                 ^^^^^^^ the trait `ToOwned` is not implemented for `B`
   |
help: consider further restricting this bound
   |
LL | impl<B: ?Sized + std::borrow::ToOwned> Display for Cow<'_, B> {
   |                ++++++++++++++++++++++

error[E0277]: the trait bound `B: ToOwned` is not satisfied
  --> $DIR/issue-79224.rs:19:12
   |
LL |     fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
   |            ^^^^^ the trait `ToOwned` is not implemented for `B`
   |
help: consider further restricting this bound
   |
LL | impl<B: ?Sized + std::borrow::ToOwned> Display for Cow<'_, B> {
   |                ++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
